--- a/pages/Dashboard/dashboard.html
+++ b/pages/Dashboard/dashboard.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PinPoint Admin - Gerenciamento de Cadastros</title>
-    <link rel="shortcut icon" href="assets/images/pinpoint-ByouH8_s.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/images/pinpoint-ByouH8_s.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap"
         rel="stylesheet">
@@ -167,32 +167,32 @@
         <!-- Sidebar -->
         <div class="sidebar w-64 flex-shrink-0 text-white">
             <div class="p-5 border-b border-gray-700 flex items-center">
-                <img src="assets/images/pinpoint-ByouH8_s.png" alt="Logo" class="w-8 h-8 mr-3">
+                <img src="../../assets/images/pinpoint-ByouH8_s.png" alt="Logo" class="w-8 h-8 mr-3">
                 <h1 class="text-xl font-bold">PinPoint Admin</h1>
             </div>
             <nav class="p-4">
                 <ul>
                     <li class="mb-1">
-                        <a href="#" class="nav-item active flex items-center p-3 rounded">
+                        <a href="dashboard.html" class="nav-item active flex items-center p-3 rounded">
                             <i class="fas fa-tasks mr-3 text-green-400"></i>
                             <span>Solicitações</span>
                             <span class="ml-auto bg-green-500 text-white text-xs px-2 py-1 rounded-full">15</span>
                         </a>
                     </li>
                     <li class="mb-1">
-                        <a href="#" class="nav-item flex items-center p-3 rounded">
+                        <a href="../postos/postos.html" class="nav-item flex items-center p-3 rounded">
                             <i class="fas fa-map-marked-alt mr-3 text-blue-400"></i>
                             <span>Postos Ativos</span>
                         </a>
                     </li>
                     <li class="mb-1">
-                        <a href="#" class="nav-item flex items-center p-3 rounded">
+                        <a href="../statistic/statistic.html" class="nav-item flex items-center p-3 rounded">
                             <i class="fas fa-chart-line mr-3 text-purple-400"></i>
                             <span>Estatísticas</span>
                         </a>
                     </li>
                     <li class="mb-1">
-                        <a href="#" class="nav-item flex items-center p-3 rounded">
+                        <a href="../settings/settings.html" class="nav-item flex items-center p-3 rounded">
                             <i class="fas fa-cog mr-3 text-yellow-400"></i>
                             <span>Configurações</span>
                         </a>
@@ -201,7 +201,7 @@
             </nav>
             <div class="absolute bottom-0 w-full p-4 border-t border-gray-700">
                 <div class="flex items-center">
-                    <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="User"
+                    <img src="../../assets/images/faces/face13.jpg" alt="User"
                         class="w-10 h-10 rounded-full mr-3">
                     <div>
                         <p class="font-medium">Admin User</p>
