--- a/pages/postos/postos.html
+++ b/pages/postos/postos.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PinPoint Admin - Postos Ativos</title>
+    <link rel="shortcut icon" href="../../assets/images/pinpoint-ByouH8_s.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap"
         rel="stylesheet">
@@ -17,6 +18,22 @@
         .sidebar {
             transition: all 0.3s ease;
             background: linear-gradient(180deg, #1a1f25 0%, #0d1117 100%);
+        }
+
+        .sidebar-border {
+            border-bottom-width: 1px;
+            width: calc(100% - 2rem);
+            margin-left: 1rem;
+            margin-right: 1rem;
+        }
+
+        /* Adicione esta regra para o container da linha */
+        .absolute.bottom-0 {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            width: 100%;
         }
 
         .card-hover {
@@ -84,9 +101,7 @@
 
         .sidebar-border {
             border-bottom-width: 1px;
-            width: calc(100% - 2rem);
-            margin-left: 1rem;
-            margin-right: 1rem;
+            width: 100%;
         }
 
         .notifications-dropdown {
@@ -119,6 +134,66 @@
             height: 300px;
             background-color: #f3f4f6;
         }
+
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            .sidebar {
+                width: 200px;
+            }
+
+            .flex-1 {
+                width: 100%;
+            }
+
+            .grid-cols-4 {
+                grid-template-columns: repeat(2, minmax(0, 1fr));
+            }
+
+            .w-64 {
+                width: 100%;
+            }
+
+            .notifications-dropdown {
+                width: 100%;
+                max-width: 280px;
+                right: 1rem;
+            }
+
+            .flex-wrap {
+                flex-direction: column;
+                gap: 1rem;
+            }
+
+            .space-x-4>*:not(:last-child) {
+                margin-right: 0;
+                margin-bottom: 1rem;
+            }
+        }
+
+        @media (max-width: 640px) {
+            .sidebar {
+                width: 100%;
+                height: auto;
+                position: relative;
+            }
+
+            .flex {
+                flex-direction: column;
+            }
+
+            .grid-cols-2 {
+                grid-template-columns: 1fr;
+            }
+
+            .min-w-full {
+                width: 100%;
+                overflow-x: auto;
+            }
+
+            .dialog-content {
+                max-width: 90%;
+            }
+        }
     </style>
 </head>
 
@@ -140,31 +215,19 @@
                         </a>
                     </li>
                     <li class="mb-1">
-                        <a href="postos.html" class="nav-item active flex items-center p-3 rounded">
+                        <a href="../postos/postos.html" class="nav-item active flex items-center p-3 rounded">
                             <i class="fas fa-map-marked-alt mr-3 text-blue-400"></i>
                             <span>Postos Ativos</span>
                         </a>
                     </li>
-                    <li class="mb-1">
-                        <a href="../statistic/statistic.html" class="nav-item flex items-center p-3 rounded">
-                            <i class="fas fa-chart-line mr-3 text-purple-400"></i>
-                            <span>Estatísticas</span>
-                        </a>
-                    </li>
-                    <li class="mb-1">
-                        <a href="../settings/settings.html" class="nav-item flex items-center p-3 rounded">
-                            <i class="fas fa-cog mr-3 text-yellow-400"></i>
-                            <span>Configurações</span>
-                        </a>
-                    </li>
+                   
+                   
                 </ul>
             </nav>
-
-            <div class="absolute bottom-0 w-full p-4">
-                <div class="sidebar-border border-gray-700 mb-4"></div>
+             <hr class="border-gray-700">
+            <div class="p-4">
                 <div class="flex items-center">
-                    <img src="../../assets/images/faces/face13.jpg" alt="User"
-                        class="w-10 h-10 rounded-full mr-3">
+                    <img src="../../assets/images/faces/face13.jpg" alt="User" class="w-10 h-10 rounded-full mr-3">
                     <div>
                         <p class="font-medium">Admin User</p>
                         <p class="text-xs text-gray-400">admin@pinpoint.com</p>
@@ -195,7 +258,61 @@
                                     class="absolute top-0 right-0 bg-red-500 text-white text-xs rounded-full w-5 h-5 flex items-center justify-center">3</span>
                             </button>
                             <div class="notifications-dropdown">
-                                <!-- Conteúdo do dropdown de notificações -->
+                                <div class="p-4 border-b border-gray-200">
+                                    <h4 class="font-medium text-gray-800">Notificações (3)</h4>
+                                </div>
+                                <div class="divide-y divide-gray-100 max-h-96 overflow-y-auto">
+                                    <!-- Notificação 1 -->
+                                    <div class="notification-item p-4 hover:bg-gray-50 cursor-pointer">
+                                        <div class="flex items-start">
+                                            <div
+                                                class="bg-green-100 text-green-600 rounded-full w-8 h-8 flex items-center justify-center mr-3 flex-shrink-0">
+                                                <i class="fas fa-check text-sm"></i>
+                                            </div>
+                                            <div class="flex-1">
+                                                <p class="text-sm font-medium text-gray-800">Novo posto aprovado</p>
+                                                <p class="text-xs text-gray-500 mt-1">Posto Shell foi aprovado e está
+                                                    ativo</p>
+                                                <p class="text-xs text-gray-400 mt-1">há 2 horas</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <!-- Notificação 2 -->
+                                    <div class="notification-item p-4 hover:bg-gray-50 cursor-pointer">
+                                        <div class="flex items-start">
+                                            <div
+                                                class="bg-blue-100 text-blue-600 rounded-full w-8 h-8 flex items-center justify-center mr-3 flex-shrink-0">
+                                                <i class="fas fa-info-circle text-sm"></i>
+                                            </div>
+                                            <div class="flex-1">
+                                                <p class="text-sm font-medium text-gray-800">Atualização de preços</p>
+                                                <p class="text-xs text-gray-500 mt-1">5 postos atualizaram seus preços
+                                                    hoje</p>
+                                                <p class="text-xs text-gray-400 mt-1">há 5 horas</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <!-- Notificação 3 -->
+                                    <div class="notification-item p-4 hover:bg-gray-50 cursor-pointer">
+                                        <div class="flex items-start">
+                                            <div
+                                                class="bg-yellow-100 text-yellow-600 rounded-full w-8 h-8 flex items-center justify-center mr-3 flex-shrink-0">
+                                                <i class="fas fa-exclamation-triangle text-sm"></i>
+                                            </div>
+                                            <div class="flex-1">
+                                                <p class="text-sm font-medium text-gray-800">Reclamação recebida</p>
+                                                <p class="text-xs text-gray-500 mt-1">Nova reclamação sobre Posto BR</p>
+                                                <p class="text-xs text-gray-400 mt-1">ontem</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="p-3 border-t border-gray-200 text-center">
+                                    <a href="#" class="text-sm text-green-600 font-medium hover:text-green-800">Ver
+                                        todas</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -660,7 +777,24 @@
             </div>
         </div>
     </div>
-
+    <script>
+        // Atualizar o contador de notificações quando uma notificação for clicada
+        document.querySelectorAll('.notification-item').forEach(item => {
+            item.addEventListener('click', () => {
+                const notificationCount = document.querySelector('.notification-btn span');
+                if (notificationCount) {
+                    let count = parseInt(notificationCount.textContent);
+                    if (count > 0) {
+                        count--;
+                        notificationCount.textContent = count.toString();
+                        if (count === 0) {
+                            notificationCount.classList.add('hidden');
+                        }
+                    }
+                }
+            });
+        });
+    </script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             // Controle do dropdown de notificações
