Adição de icon de logut

--- a/pages/Dashboard/dashboard.html
+++ b/pages/Dashboard/dashboard.html
@@ -262,6 +262,12 @@
                             <span>Postos Ativos</span>
                         </a>
                     </li>
+                     <li class="mb-1">
+                        <a href="../../index.html" class="nav-item flex items-center p-3 rounded">
+                            <i class="fas fa-sign-out mr-3 text-yellow-400"></i>
+                            <span>Postos Ativos</span>
+                        </a>
+                    </li>
                 </ul>
             </nav>
             <hr class="border-gray-700">
