--- a/pages/postos/postos.html
+++ b/pages/postos/postos.html
@@ -220,11 +220,16 @@
                             <span>Postos Ativos</span>
                         </a>
                     </li>
-                   
-                   
+                    <li class="mb-1">
+                        <a href="../../index.html" class="nav-item flex items-center p-3 rounded">
+                            <i class="fas fa-sign-out mr-3 text-yellow-400"></i>
+                            <span>Postos Ativos</span>
+                        </a>
+                    </li>
+
                 </ul>
             </nav>
-             <hr class="border-gray-700">
+            <hr class="border-gray-700">
             <div class="p-4">
                 <div class="flex items-center">
                     <img src="../../assets/images/faces/face13.jpg" alt="User" class="w-10 h-10 rounded-full mr-3">
