Organização dos arquivos e pastas

--- a/pages/postos/postos.html
+++ b/pages/postos/postos.html
@@ -10,191 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        body {
-            font-family: 'Nunito Sans', sans-serif;
-        }
-
-        .sidebar {
-            transition: all 0.3s ease;
-            background: linear-gradient(180deg, #1a1f25 0%, #0d1117 100%);
-        }
-
-        .sidebar-border {
-            border-bottom-width: 1px;
-            width: calc(100% - 2rem);
-            margin-left: 1rem;
-            margin-right: 1rem;
-        }
-
-        /* Adicione esta regra para o container da linha */
-        .absolute.bottom-0 {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            width: 100%;
-        }
-
-        .card-hover {
-            transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-        }
-
-        .card-hover:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 20px rgba(8, 174, 100, 0.1);
-        }
-
-        .status-active {
-            background-color: #ECFDF5;
-            color: #065F46;
-        }
-
-        .status-inactive {
-            background-color: #FEF2F2;
-            color: #991B1B;
-        }
-
-        .dialog-overlay {
-            background-color: rgba(0, 0, 0, 0.5);
-            backdrop-filter: blur(5px);
-            overflow-y: auto;
-        }
-
-        .dialog-content {
-            animation: fadeInUp 0.4s cubic-bezier(0.22, 1, 0.36, 1);
-        }
-
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .btn-primary {
-            background: #16AE47;
-            transition: all 0.3s ease;
-        }
-
-        .btn-primary:hover {
-            background: linear-gradient(135deg, #08AE64, #16AE47);
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(8, 174, 100, 0.3);
-        }
-
-        .nav-item {
-            transition: all 0.2s ease;
-            border-left: 3px solid transparent;
-        }
-
-        .nav-item:hover,
-        .nav-item.active {
-            background-color: rgba(255, 255, 255, 0.05);
-            border-left-color: #16AE47;
-        }
-
-        .sidebar-border {
-            border-bottom-width: 1px;
-            width: 100%;
-        }
-
-        .notifications-dropdown {
-            display: none;
-            position: absolute;
-            right: 0;
-            top: 100%;
-            width: 320px;
-            background: white;
-            border-radius: 0.5rem;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-            z-index: 50;
-            margin-top: 0.5rem;
-        }
-
-        .notifications-dropdown.show {
-            display: block;
-            animation: fadeInUp 0.2s ease-out;
-        }
-
-        .notification-item {
-            transition: background-color 0.2s ease;
-        }
-
-        .notification-item:hover {
-            background-color: #f8fafc;
-        }
-
-        .map-container {
-            height: 300px;
-            background-color: #f3f4f6;
-        }
-
-        /* Responsive adjustments */
-        @media (max-width: 768px) {
-            .sidebar {
-                width: 200px;
-            }
-
-            .flex-1 {
-                width: 100%;
-            }
-
-            .grid-cols-4 {
-                grid-template-columns: repeat(2, minmax(0, 1fr));
-            }
-
-            .w-64 {
-                width: 100%;
-            }
-
-            .notifications-dropdown {
-                width: 100%;
-                max-width: 280px;
-                right: 1rem;
-            }
-
-            .flex-wrap {
-                flex-direction: column;
-                gap: 1rem;
-            }
-
-            .space-x-4>*:not(:last-child) {
-                margin-right: 0;
-                margin-bottom: 1rem;
-            }
-        }
-
-        @media (max-width: 640px) {
-            .sidebar {
-                width: 100%;
-                height: auto;
-                position: relative;
-            }
-
-            .flex {
-                flex-direction: column;
-            }
-
-            .grid-cols-2 {
-                grid-template-columns: 1fr;
-            }
-
-            .min-w-full {
-                width: 100%;
-                overflow-x: auto;
-            }
-
-            .dialog-content {
-                max-width: 90%;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="../../assets/css/postos style.css">
 </head>
 
 <body class="bg-gray-50">
@@ -221,10 +37,9 @@
                         </a>
                     </li>
                     <li class="mb-1">
-                        <a href="../../index.html" class="nav-item flex items-center p-3 rounded">
-                            <i class="fas fa-sign-out mr-3 text-yellow-400"></i>
-                            <span>Postos Ativos</span>
-                        </a>
+                        <button data-logout class="nav-item flex items-center p-3 rounded">
+                            <i class="fas fa-sign-out-alt mr-3 text-yellow-400"></i> Sair
+                        </button>
                     </li>
 
                 </ul>
@@ -782,113 +597,8 @@
             </div>
         </div>
     </div>
-    <script>
-        // Atualizar o contador de notificações quando uma notificação for clicada
-        document.querySelectorAll('.notification-item').forEach(item => {
-            item.addEventListener('click', () => {
-                const notificationCount = document.querySelector('.notification-btn span');
-                if (notificationCount) {
-                    let count = parseInt(notificationCount.textContent);
-                    if (count > 0) {
-                        count--;
-                        notificationCount.textContent = count.toString();
-                        if (count === 0) {
-                            notificationCount.classList.add('hidden');
-                        }
-                    }
-                }
-            });
-        });
-    </script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            // Controle do dropdown de notificações
-            const notificationBtn = document.querySelector('.notification-btn');
-            const notificationsDropdown = document.querySelector('.notifications-dropdown');
-
-            notificationBtn.addEventListener('click', (e) => {
-                e.stopPropagation();
-                notificationsDropdown.classList.toggle('show');
-            });
-
-            document.addEventListener('click', (e) => {
-                if (!notificationBtn.contains(e.target) && !notificationsDropdown.contains(e.target)) {
-                    notificationsDropdown.classList.remove('show');
-                }
-            });
-
-            // Controle do modal de detalhes
-            const stationModal = document.getElementById('station-modal');
-            const closeStationModal = document.getElementById('close-station-modal');
-            const viewButtons = document.querySelectorAll('.view-btn');
-
-            viewButtons.forEach(btn => {
-                btn.addEventListener('click', () => {
-                    stationModal.classList.remove('hidden');
-                    document.body.style.overflow = 'hidden';
-                });
-            });
-
-            closeStationModal.addEventListener('click', () => {
-                stationModal.classList.add('hidden');
-                document.body.style.overflow = 'auto';
-            });
-
-            stationModal.addEventListener('click', (e) => {
-                if (e.target === stationModal) {
-                    stationModal.classList.add('hidden');
-                    document.body.style.overflow = 'auto';
-                }
-            });
-
-            // Controle dos botões de ativar/desativar
-            const deactivateButtons = document.querySelectorAll('.deactivate-btn');
-            const activateButtons = document.querySelectorAll('.activate-btn');
-
-            deactivateButtons.forEach(btn => {
-                btn.addEventListener('click', () => {
-                    if (confirm('Tem certeza que deseja desativar este posto?')) {
-                        // Lógica para desativar o posto
-                        btn.innerHTML = '<i class="fas fa-toggle-off"></i>';
-                        btn.classList.remove('deactivate-btn');
-                        btn.classList.add('activate-btn');
-
-                        // Atualizar o status na tabela
-                        const row = btn.closest('tr');
-                        const statusCell = row.querySelector('td:nth-child(4)');
-                        statusCell.innerHTML = '<span class="status-inactive px-2 py-1 text-xs font-medium rounded-full">Inativo</span>';
-                    }
-                });
-            });
-
-            activateButtons.forEach(btn => {
-                btn.addEventListener('click', () => {
-                    if (confirm('Tem certeza que deseja ativar este posto?')) {
-                        // Lógica para ativar o posto
-                        btn.innerHTML = '<i class="fas fa-toggle-on"></i>';
-                        btn.classList.remove('activate-btn');
-                        btn.classList.add('deactivate-btn');
-
-                        // Atualizar o status na tabela
-                        const row = btn.closest('tr');
-                        const statusCell = row.querySelector('td:nth-child(4)');
-                        statusCell.innerHTML = '<span class="status-active px-2 py-1 text-xs font-medium rounded-full">Ativo</span>';
-                    }
-                });
-            });
-
-            // Filtros
-            const filterButtons = document.querySelectorAll('.filter-btn');
-
-            filterButtons.forEach(btn => {
-                btn.addEventListener('click', () => {
-                    filterButtons.forEach(b => b.classList.remove('active', 'bg-green-600', 'text-white'));
-                    btn.classList.add('active', 'bg-green-600', 'text-white');
-                    // Lógica para filtrar os postos (implementar conforme necessidade)
-                });
-            });
-        });
-    </script>
+    <script src="../../assets/js/postos.js"></script>
+    <script src="../../assets/js/check login.js"></script>
 </body>
 
 </html>
